--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
 	    <title>Buy and Sell Tickets: Concerts, Sports, &amp; Theatre | Vivid Seats </title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="bundle.js"></script>
     </head>
     <body>
         <div class="container">
@@ -29,7 +30,7 @@
                             <th>State</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tableBody">
                         <tr>
                             <td>USC Trojans at Notre Dame Fighting Irish</td>
                             <td>Oct 17 7:30 PM</td>
@@ -51,7 +52,7 @@
                       <div class="modal-body">
                         <form name="addEventForm">
                             <p> Event Information</p>
-                            <input placeholder="Event Name">
+                            <input placeholder="Event Name" id="add-event-name">
                             <input placeholder="Date" id="add-event-date">
                             <input placeholder="Time" id="add-event-time">
                             <p> Venue Information</p>
